<?xml version="1.0"?>
<package>
  <name>rwt_app_chooser</name>
  <version>0.1.3</version>
  <description>The simple web frontend for app_manager</description>

  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>

  <license>MIT</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>app_manager</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>roswww</run_depend>
  <run_depend>sound_play</run_depend>

  <test_depend>phantomjs</test_depend>
  <test_depend>python-selenium-pip</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

</package>
