<?xml version="1.0"?>
<package>
  <name>rwt_image_view</name>
  <version>0.0.0</version>
  <description>The rwt_image_view package</description>

  <maintainer email="garaemon@gmail.com">Ryohei Ueda</maintainer>
  <license>BSD</license>
  <author email="garaemon@gmail.com">Ryohei Ueda</author>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mjpeg_server</build_depend>
  <build_depend>mjpegcanvas</build_depend>
  <build_depend>roslibjs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rwt_utils_3rdparty</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roswww</build_depend>
  <run_depend>mjpeg_server</run_depend>
  <run_depend>mjpegcanvas</run_depend>
  <run_depend>roslibjs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>roswww</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
