<?xml version="1.0"?>
<package>
  <name>rwt_image_view</name>
  <version>0.1.3</version>
  <description>The rwt_image_view package</description>

  <maintainer email="garaemon@gmail.com">Ryohei Ueda</maintainer>
  <maintainer email="iiysaito@opensource-robotics.tokyo.jp">Isaac IY Saito</maintainer>
  <license>BSD</license>
  <author email="garaemon@gmail.com">Ryohei Ueda</author>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>
  <url type="website">http://wiki.ros.org/rwt_image_view</url>
  <url type="bugtracker">https://github.com/tork-a/visualization_rwt/issues</url>
  <url type="repository">https://github.com/tork-a/visualization_rwt</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>web_video_server</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rwt_utils_3rdparty</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roswww</build_depend>
  <run_depend>web_video_server</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>roswww</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>message_runtime</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>image_publisher</test_depend>
  <test_depend>rviz</test_depend>

  <export>
  </export>
</package>
