<?xml version="1.0"?>
<package>
  <name>rwt_moveit</name>
  <version>0.1.3</version>
  <description>This package provides a web user interface of <a href = "http://moveit.ros.org/">MoveIt!</a> on top of visualizer in <a href = "http://wiki.ros.org/ros3djs">ros3djs</a>.</description>
  <maintainer email="iiysaito@opensource-robotics.tokyo.jp">Isaac I.Y. Saito</maintainer>
  <author email="murase@jsk.imi.i.u-tokyo.ac.jp">Kazuto Murase</author>
  <url type="website">http://wiki.ros.org/rwt_moveit</url>
  <url type="bugtracker">https://github.com/tork-a/visualization_rwt/issues</url>
  <url type="repository">https://github.com/tork-a/visualization_rwt</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_marker_proxy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roswww</build_depend>
  <build_depend>rwt_utils_3rdparty</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_web_republisher</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>interactive_marker_proxy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roswww</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_web_republisher</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/> 
  </export>
</package>
