<package>
  <name>rwt_plot</name>
  <version>0.1.1</version>
  <description>rwt_plot</description>
  <maintainer email="ueda@jsk.imi.i.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <maintainer email="iiysaito@opensource-robotics.tokyo.jp">Isaac IY Saito</maintainer>
  <author email="ueda@jsk.imi.i.u-tokyo.ac.jp">Ryohei Ueda</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rwt_plot</url>
  <url type="bugtracker">https://github.com/tork-a/visualization_rwt/issues</url>
  <url type="repository">https://github.com/tork-a/visualization_rwt</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbridge_server</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rwt_utils_3rdparty</build_depend>
  <build_depend>roswww</build_depend>

  <run_depend>rosbridge_server</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>
  <run_depend>roswww</run_depend>

  <test_depend>rostest</test_depend>

  <export></export>
</package>
