<?xml version="1.0"?>
<package>
  <name>rwt_robot_monitor</name>
  <version>0.1.3</version>
  <description>The rwt_robot_monitor package</description>

  <maintainer email="garaemon@gmail.com">Ryohei Ueda</maintainer>
  <maintainer email="iiysaito@opensource-robotics.tokyo.jp">Isaac IY Saito</maintainer>
  <author email="garaemon@gmail.com">Ryohei Ueda</author>
  <url type="website">http://wiki.ros.org/rwt_robot_monitor</url>
  <url type="bugtracker">https://github.com/tork-a/visualization_rwt/issues</url>
  <url type="repository">https://github.com/tork-a/visualization_rwt</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>rwt_plot</build_depend>
  <build_depend>rwt_utils_3rdparty</build_depend>
  <build_depend>roswww</build_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>rwt_plot</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>
  <run_depend>roswww</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>diagnostic_aggregator</test_depend>

  <export>
  </export>
</package>
