<?xml version="1.0"?>
<package>
  <name>rwt_speech_recognition</name>
  <version>0.0.3</version>
  <description>The rwt_speech_recognition package</description>
  <maintainer email="iiysaito@opensource-robotics.tokyo.jp">Isaac IY Saito</maintainer>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rwt_speech_recognition</url>
  <url type="bugtracker">https://github.com/tork-a/visualization_rwt/issues</url>
  <url type="repository">https://github.com/tork-a/visualization_rwt</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>roswww</build_depend>
  <build_depend>rwt_utils_3rdparty</build_depend>
  <build_depend>speech_recognition_msgs</build_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>roswww</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>
  <run_depend>speech_recognition_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
