<?xml version="1.0"?>
<package>
  <name>rwt_steer</name>
  <version>0.1.3</version>
  <description>The rwt_steer package</description>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <author email="yugajmera@gmail.com">Yug Ajmera</author>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <maintainer email="yugajmera@gmail.com">Yug Ajmera</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>web_video_server</build_depend>
  <build_depend>rwt_utils_3rdparty</build_depend>
  <build_depend>roswww</build_depend>

  <run_depend>rosbridge_server</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>
  <run_depend>web_video_server</run_depend>
  <run_depend>roswww</run_depend>

  <test_depend>image_publisher</test_depend>
  <test_depend>rviz</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
