<?xml version="1.0"?>
<package>
  <name>visualization_rwt</name>
  <version>1.0.0</version>
  <description>
   <p>visualization packages using rwt</p>
  </description>

  <maintainer email="ueda@jsk.imi.i.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <author email="ueda@jsk.imi.i.u-tokyo.ac.jp">Ryohei Ueda</author>
  <author email="murase@jsk.imi.i.u-tokyo.ac.jp">Kazuto Murase</author>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rwt_moveit</run_depend>
  <run_depend>rwt_plot</run_depend>
  <run_depend>rwt_robot_monitor</run_depend>
  <run_depend>rwt_image_view</run_depend>
  <run_depend>rwt_speech_recognition</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
